--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <div id="vue-app">
-        <h1>{{ name }}</h1>
-    </div>
+        <h1>{{ greet('night') }}</h1>
+        <p>Name: {{ name }}</p>
+        <p>Job: {{ job }}</p>
+    </div>    
     <script src="app.js"></script>
 </body>
 </html>
