--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <div id="vue-app">
-        <h1>{{ greet('night') }}</h1>
-        <p>Name: {{ name }}</p>
-        <p>Job: {{ job }}</p>
+        <h1>Data Binding</h1>
+        <a v-bind:href="website">The Net Ninja</a>    
+        <input type="text" v-bind:value="job"/>   
+        <p v-html="websiteTag"></p>
+       
     </div>    
     <script src="app.js"></script>
 </body>
