--- a/11 - Conditionals/Conditionals.html
+++ b/11 - Conditionals/Conditionals.html
@@ -13,8 +13,11 @@
         <h1>Conditionals</h1>        
         <button v-on:click="error = !error">Toggle Error</button>
         <button v-on:click="success = !success">Toggle Success</button>
-        <p v-if="error">There has been an error</p>
-        <p v-if="success">Whooo, success :)</p>
+        <!-- <p v-if="error">There has been an error</p>
+        <p v-else-if="success">Whooo, success :)</p> -->
+        <p v-show="error">There has been an error</p>  
+        <p v-show="success">Whooo, success :)</p>    
+
     </div>    
     <script src="app.js"></script>
 </body>
